--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MYSQL_HOST=localhost
 MYSQL_DB_NAME=proyecto final
 MYSQL_USER=root
 MYSQL_PASSWORD=
+
+CLOUDINARY_URL=cloudinary://<your_api_key>:<your_api_secret>@dcftrqwqt
