--- a/.env
+++ b/.env
@@ -2,5 +2,4 @@ MYSQL_HOST=localhost
 MYSQL_DB_NAME=proyecto final
 MYSQL_USER=root
 MYSQL_PASSWORD=
-
-CLOUDINARY_URL=cloudinary://<your_api_key>:<your_api_secret>@dcftrqwqt
+CLOUDINARY_URL=cloudinary://945565938629946:fd7aVs0pf4tQ0lgHkpKtExkAW_0@dcftrqwqt
