--- a/.env
+++ b/.env
@@ -2,4 +2,10 @@ MYSQL_HOST=localhost
 MYSQL_DB_NAME=proyecto final
 MYSQL_USER=root
 MYSQL_PASSWORD=
+
 CLOUDINARY_URL=cloudinary://945565938629946:fd7aVs0pf4tQ0lgHkpKtExkAW_0@dcftrqwqt
+
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=7c96b866180f75
+SMTP_PASS=2f648aab0d6b62
