--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "md5": "^2.3.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "session": "^0.1.0",
     "util": "^0.12.5"
